@@ -1,20 +1,21 @@
 package com.otterwood.common.interceptor;
 
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.support.PathMatchingResourcePatternResolver;
 import org.springframework.core.io.support.ResourcePatternResolver;
 import org.springframework.util.AntPathMatcher;
 import org.springframework.util.FileCopyUtils;
-import org.springframework.web.servlet.handler.HandlerInterceptorAdapter;
-import sun.misc.BASE64Decoder;
+import org.springframework.web.servlet.HandlerInterceptor;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.PrintWriter;
+import java.nio.charset.StandardCharsets;
+import java.util.Base64;
 
 /**
- *  Swagger 文档
+ *  Swagger 文档拦截器
  *  +----------------------------------------------------------------------
  *  | OTTERWOOD [ OTTERWOOD赋能开发者，助力企业发展 ]
  *  +----------------------------------------------------------------------
@@ -25,15 +26,17 @@ import java.io.PrintWriter;
  *  | Author: OTTERWOOD Team <admin@otterwood.com>
  *  +----------------------------------------------------------------------
  */
-public class SwaggerInterceptor extends HandlerInterceptorAdapter {
-    private String username;
-    private String password;
-    private Boolean check;
+public class SwaggerInterceptor implements HandlerInterceptor {
+    private final String username;
+    private final String password;
+    private final Boolean check;
+
     public SwaggerInterceptor(String username, String password, Boolean check) {
         this.username = username;
         this.password = password;
         this.check = check;
     }
+
     @Override
     public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
         String authorization = request.getHeader("Authorization");
@@ -41,7 +44,6 @@ public class SwaggerInterceptor extends HandlerInterceptorAdapter {
         if (!isAuthSuccess) {
             response.setCharacterEncoding("utf-8");
             response.setStatus(401);
-//            response.setStatus(401,"Unauthorized");
             response.setHeader("WWW-authenticate", "Basic realm=\"Realm\"");
             try (PrintWriter writer = response.getWriter()) {
                 writer.print("Forbidden, unauthorized user");
@@ -49,18 +51,24 @@ public class SwaggerInterceptor extends HandlerInterceptorAdapter {
         }
         return isAuthSuccess;
     }
+
     public boolean httpBasicAuth(String authorization) throws IOException {
-        if(check){
+        if (Boolean.TRUE.equals(check)) {
             if (authorization != null && authorization.split(" ").length == 2) {
-                String userAndPass = new String(new BASE64Decoder().decodeBuffer(authorization.split(" ")[1]));
-                String username = userAndPass.split(":").length == 2 ? userAndPass.split(":")[0] : null;
-                String password = userAndPass.split(":").length == 2 ? userAndPass.split(":")[1] : null;
-                return this.username.equals(username) && this.password.equals(password);
+                String userAndPass = new String(
+                        Base64.getDecoder().decode(authorization.split(" ")[1]),
+                        StandardCharsets.UTF_8);
+                String[] parts = userAndPass.split(":");
+                if (parts.length != 2) {
+                    return false;
+                }
+                return this.username.equals(parts[0]) && this.password.equals(parts[1]);
             }
             return false;
         }
         return true;
     }
+
     @Override
     public void afterCompletion(HttpServletRequest request, HttpServletResponse response, Object handler, Exception ex) throws Exception {
         String uri = request.getRequestURI();
